[gd_scene load_steps=18 format=3 uid="uid://bhaj4bqtsgovd"]

[ext_resource type="Script" path="res://scripts/interface.gd" id="1_tp335"]
[ext_resource type="FontFile" uid="uid://vv01ikl12mma" path="res://fonts/century-gothic/Century Gothic.ttf" id="2_5qos4"]
[ext_resource type="FontFile" uid="uid://bekn0vgx22mbc" path="res://fonts/century-gothic/GOTHICB.TTF" id="3_x42mg"]
[ext_resource type="Texture2D" uid="uid://cdpqdlkh4ovre" path="res://ui_art/Mute.png" id="4_bllxt"]
[ext_resource type="Texture2D" uid="uid://c7iicmyqmiuhp" path="res://ui_art/Restart.png" id="5_ljjem"]
[ext_resource type="Texture2D" uid="uid://sdvf4rnm6ocb" path="res://ui_art/Pause.png" id="6_811v5"]
[ext_resource type="Texture2D" uid="uid://b28muhapik5tq" path="res://art/More.png" id="6_oqf8b"]
[ext_resource type="Texture2D" uid="uid://dkiskd78dsspu" path="res://ui_art/Play.png" id="7_gjcfc"]
[ext_resource type="PackedScene" uid="uid://7tcl54ibhdyd" path="res://user_interface/pause_menu.tscn" id="9_fw3oe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1haci"]
bg_color = Color(0.247059, 0, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7upo"]
bg_color = Color(0.403922, 0.00392157, 0.415686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cclc3"]
bg_color = Color(0.407843, 0, 0.0509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgjxq"]
bg_color = Color(0.890196, 0, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15wb7"]
bg_color = Color(0.937255, 0, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yeerx"]
bg_color = Color(0.121569, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4qbk"]
bg_color = Color(0.231373, 0.00784314, 0.419608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6727"]
bg_color = Color(0.462745, 0.835294, 0.8, 1)

[node name="interface" type="CanvasLayer" groups=["Interface"]]
process_mode = 3
script = ExtResource("1_tp335")

[node name="Username" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.852
anchor_right = 0.118
anchor_bottom = 0.897
offset_left = -0.128
offset_top = -0.0960083
offset_right = 0.0639954
offset_bottom = -0.255981
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_font_sizes/font_size = 20
text = "USERNAME"
vertical_alignment = 1

[node name="Class" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.229
anchor_top = 0.864
anchor_right = 0.278
anchor_bottom = 0.894
offset_left = 0.191986
offset_top = 0.127991
offset_right = -0.256042
offset_bottom = -2.31201
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_font_sizes/font_size = 10
text = "CLASS"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HeartFelled" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.284
anchor_right = 0.951
anchor_bottom = 0.586
offset_left = 0.127991
offset_top = 7.96799
offset_right = -1.552
offset_bottom = 0.271973
theme_override_colors/font_color = Color(0.745098, 0.580392, 0, 1)
theme_override_fonts/font = ExtResource("3_x42mg")
theme_override_font_sizes/font_size = 150
text = "HEART CURED"

[node name="HeartHealth" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.037
anchor_right = 0.667
anchor_bottom = 0.099
offset_left = 0.384003
offset_top = 0.0240002
offset_right = -0.384033
offset_bottom = -0.152008
theme_override_styles/background = SubResource("StyleBoxFlat_1haci")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7upo")
value = 28.62
show_percentage = false

[node name="LayersLeft" type="Label" parent="HeartHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.875
anchor_top = -0.2
anchor_right = 1.0
anchor_bottom = 1.025
offset_left = -3.05176e-05
offset_top = 8.0
offset_right = -8.0
theme_override_fonts/font = ExtResource("3_x42mg")
theme_override_font_sizes/font_size = 30
text = "xN"

[node name="Health" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.89
anchor_right = 0.278
anchor_bottom = 0.926
offset_left = -0.128
offset_top = 0.279968
offset_right = -0.256042
offset_bottom = 3.95197
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_styles/background = SubResource("StyleBoxFlat_cclc3")
theme_override_styles/fill = SubResource("StyleBoxFlat_dgjxq")
value = 100.0

[node name="PoisonHealth" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.89
anchor_right = 0.278
anchor_bottom = 0.926
offset_left = -0.128
offset_top = 0.279968
offset_right = -0.256042
offset_bottom = 3.95197
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_styles/background = SubResource("StyleBoxFlat_15wb7")
theme_override_styles/fill = SubResource("StyleBoxFlat_yeerx")
value = 100.0

[node name="Spirit" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.938
anchor_right = 0.278
anchor_bottom = 0.98
offset_left = -0.128
offset_top = 0.175964
offset_right = -0.256042
offset_bottom = -0.0400391
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_styles/background = SubResource("StyleBoxFlat_g4qbk")
theme_override_styles/fill = SubResource("StyleBoxFlat_q6727")
value = 100.0

[node name="Interact" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.292
anchor_top = 0.914
anchor_right = 0.319
anchor_bottom = 0.963
offset_left = -0.384033
offset_top = -0.272034
offset_right = 0.511993
offset_bottom = -0.0241089
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="Label" type="Label" parent="Interact"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 1.5
anchor_bottom = 1.5
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_font_sizes/font_size = 20
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.819
anchor_top = 0.914
anchor_right = 0.986
anchor_bottom = 0.975
offset_left = 0.511963
offset_top = -0.272034
offset_right = 0.128052
offset_bottom = 0.200012
color = Color(0, 0, 0, 0.509804)

[node name="Currency" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.012
anchor_right = 0.917
anchor_bottom = 1.0
offset_top = 1.52
offset_right = -0.0639343
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_font_sizes/font_size = 15
text = "RUNES"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Timer" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.833
anchor_top = -0.002
anchor_right = 1.0
anchor_bottom = 0.074
offset_left = 0.38385
offset_top = 1.296
offset_bottom = -7.952
color = Color(0, 0, 0, 0.427451)

[node name="time" type="Label" parent="Timer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.10352e-05
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5qos4")
theme_override_font_sizes/font_size = 30
text = "XX:XX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="."]
offset_right = 168.0
offset_bottom = 56.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 160.0
offset_bottom = 48.0
color = Color(0.533333, 0.211765, 0.192157, 1)

[node name="Mute" type="TextureButton" parent="."]
process_mode = 3
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.062
offset_right = -0.32
offset_bottom = -0.176003
texture_normal = ExtResource("4_bllxt")
texture_pressed = ExtResource("4_bllxt")
texture_hover = ExtResource("4_bllxt")
ignore_texture_size = true
stretch_mode = 0

[node name="Label3" type="Label" parent="Mute"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.6
anchor_right = 1.8
anchor_bottom = 1.2
theme_override_fonts/font = ExtResource("2_5qos4")
text = "M"

[node name="Restart" type="TextureButton" parent="."]
process_mode = 3
anchors_preset = -1
anchor_left = 0.035
anchor_right = 0.069
anchor_bottom = 0.062
offset_left = -0.32
offset_right = 0.511993
offset_bottom = -0.176003
texture_normal = ExtResource("5_ljjem")
texture_pressed = ExtResource("5_ljjem")
texture_hover = ExtResource("5_ljjem")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="Restart"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.6
anchor_right = 1.8
anchor_bottom = 1.2
theme_override_fonts/font = ExtResource("2_5qos4")
text = "R"

[node name="Menu" type="TextureButton" parent="."]
process_mode = 3
modulate = Color(0.576471, 1, 1, 1)
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.012
anchor_right = 0.132
anchor_bottom = 0.049
offset_left = 0.127991
offset_top = 0.224
offset_right = -0.0639954
offset_bottom = 0.247999
texture_normal = ExtResource("6_oqf8b")
texture_pressed = ExtResource("6_oqf8b")
texture_hover = ExtResource("6_oqf8b")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 1.0
anchor_right = 1.333
anchor_bottom = 1.708
offset_left = 0.0079999
offset_right = 0.00799942
offset_bottom = 0.00799942
theme_override_font_sizes/font_size = 10
text = "TAB"

[node name="Pause" type="TextureButton" parent="."]
unique_name_in_owner = true
process_mode = 3
anchors_preset = -1
anchor_left = 0.069
anchor_right = 0.104
anchor_bottom = 0.062
offset_left = 0.511993
offset_right = 0.192001
offset_bottom = -0.176003
texture_normal = ExtResource("6_811v5")
texture_pressed = ExtResource("6_811v5")
texture_hover = ExtResource("6_811v5")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Pause"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.575
anchor_right = 1.8
anchor_bottom = 1.2
offset_top = 0.999998
theme_override_fonts/font = ExtResource("2_5qos4")
text = "P"

[node name="Play" type="TextureButton" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = -1
anchor_left = 0.069
anchor_right = 0.104
anchor_bottom = 0.062
offset_left = 0.511993
offset_right = 0.192001
offset_bottom = -0.176003
texture_normal = ExtResource("7_gjcfc")
texture_pressed = ExtResource("7_gjcfc")
texture_hover = ExtResource("7_gjcfc")
ignore_texture_size = true
stretch_mode = 0

[node name="Label2" type="Label" parent="Play"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.6
anchor_right = 1.8
anchor_bottom = 1.2
theme_override_fonts/font = ExtResource("2_5qos4")
text = "P"

[node name="pause_menu" parent="." instance=ExtResource("9_fw3oe")]
unique_name_in_owner = true
visible = false

[node name="Label" type="Label" parent="."]
offset_left = 1112.0
offset_right = 1152.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
